<resources>
    <string name="app_name">TaskMaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="main_activity_img">Placeholder Img</string>
    <string name="add_task_activity_label">Add Task</string>
    <string name="task_input_label">Task Title</string>
    <string name="add_task_input">My Task</string>
    <string name="add_task_description_label">Task Description</string>
    <string name="add_task_description_input_field">Do Something</string>
    <string name="add_task_total_tasks">Total tasks: 0</string>
    <string name="all_tasks_activity_title">All Tasks</string>
    <string name="all_tasks_placeholder_img">All Tasks Placeholder img</string>
    <string name="my_task">My Task</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur tristique, libero sed volutpat fringilla...</string>
    <string name="taskOne">Task One</string>
    <string name="taskTwo">Task Two</string>
    <string name="taskThree">Task Three</string>
    <string name="add_username">Username</string>
    <string name="save">Save</string>
    <string name="blank_task_name" />
    <string name="do_something">Do Something</string>
    <string name="alpha_team">Alpha Team</string>
    <string name="bravo_team">Bravo Team</string>
    <string name="delta_team">Delta Team</string>
    <string name="team_name">Team Name</string>
    <string name="team_label">What Team are you on?</string>
    <string name="team_placeholder">Team Name</string>
    <string name="Login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="verification">Verification</string>
    <string name="verification_code">Verification Code</string>
    <string name="logout">Logout</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_task_image">Task Image</string>
    <string name="task_location">Task Location:</string>
    <string name="lat">Latitude:</string>
    <string name="lon">Longitude:</string>
    <string name="address">Address:</string>
    <string name="announce">Announce</string>
    <string name="translate">Translate (es)</string>
    <string name="user_added_image">User Added Image</string>
    <string name="no_task_name">No Task Name</string>
    <string name="no_task_description">No Task Description</string>
    <string name="no_task_status">No Task Status</string>
    <string name="latitude">"Latitude: "</string>
    <string name="no_latitude_provided">No Latitude Provided.</string>
    <string name="longitude">"Longitude: "</string>
    <string name="no_longitude_provided">No Longitude Provided.</string>
    <string name="no_address_provided">No Address Provided.</string>
</resources>