<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddTaskActivity">

    <TextView
        android:id="@+id/AddTaskActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:text="@string/add_task_activity_label"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TaskInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="@string/task_input_label"
        app:layout_constraintStart_toStartOf="@+id/AddTaskActivity"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivityImageView" />

    <EditText
        android:id="@+id/AddTaskInputField"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:hint="@string/add_task_input"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/TaskInputLabel"
        app:layout_constraintTop_toBottomOf="@+id/TaskInputLabel" />

    <TextView
        android:id="@+id/TaskDescriptionInputLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_task_description_label"
        app:layout_constraintStart_toStartOf="@+id/AddTaskInputField"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskInputField" />

    <EditText
        android:id="@+id/AddTaskDescriptionInputField"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:hint="@string/add_task_description_input_field"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/TaskDescriptionInputLabel"
        app:layout_constraintTop_toBottomOf="@+id/TaskDescriptionInputLabel" />
<!--adding changes from LAB33-->
    <TextView
        android:id="@+id/AddTaskActivityTeamNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_name"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@+id/AddTaskDescriptionInputField" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskDescriptionInputField">


        <RadioButton
            android:id="@+id/radio_alpha"
            style="@style/CustomRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/alpha_team" />

        <RadioButton
            android:id="@+id/radio_bravo"
            style="@style/CustomRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/bravo_team" />

        <RadioButton
            android:id="@+id/radio_delta"
            style="@style/CustomRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/delta_team" />
    </RadioGroup>

    <Button
        android:id="@+id/AddTaskInputButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/AddTaskTotalCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task_total_tasks"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskInputButton" />

    <TextView
        android:id="@+id/AddTaskSubmittedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/AddTaskInputButton"
        app:layout_constraintTop_toBottomOf="@+id/TaskDescriptionInputLabel" />

    <ImageView
        android:id="@+id/AddTaskActivityImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/add_task_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskActivity"
        app:srcCompat="@drawable/ic_launcher_background" />


</androidx.constraintlayout.widget.ConstraintLayout>